--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "string-is-numeric": "^1.0.0",
+    "styled-components": "^5.2.1",
     "uuid": "^8.3.1",
     "world-countries": "^4.0.0"
   },
