--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://desaxion.github.io/klapp/",
+  "homepage": "klapp/",
   "name": "lab1",
   "version": "0.1.0",
   "private": true,
